--- a/src/main/webapp/assets/css/sb-admin-2.css
+++ b/src/main/webapp/assets/css/sb-admin-2.css
@@ -11714,7 +11714,7 @@ a:focus {
 }
 
 .bg-login-image {
-    background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800") center;
+    background: url("../images/logo.png") center;
     background-size: cover;
 }
 
